style: Clean up imports, Java 21+ APIs